syntax = "proto3";
package pb;

option go_package = "gitee.com/messizuo/kama-cache-go";

message Request {
  string group = 1;
  string key = 2;
  bytes value = 3;
}

// 响应
message  ResponseForGet {
  bytes value = 1;
}

// 响应
message ResponseForDelete {
  bool value = 1;
}

// 服务
service KamaCache {
  rpc Get(Request) returns (ResponseForGet);
  rpc Set(Request) returns (ResponseForGet);
  rpc Delete(Request) returns (ResponseForDelete);
}